<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.aliosm.examsandquizzesreminder.EditExamQuiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chooseTypeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/choose_type"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/examRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="examRbClick"
                android:text="@string/exam"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/quizRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="quizRbClick"
                android:text="@string/quiz"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:labelFor="@+id/nameEt"
            android:text="@string/exam_name"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="text"/>

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:labelFor="@+id/dateEt"
            android:text="@string/exam_date"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            style="?android:buttonBarStyle">

            <EditText
                android:id="@+id/dateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="date"
                android:text="@string/yyyy_mm_dd"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/pickDateBtn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="pickDateBtnClick"
                android:text="@string/pick_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:labelFor="@+id/timeEt"
            android:text="@string/exam_time"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:buttonBarStyle">

            <EditText
                android:id="@+id/timeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="time"
                android:text="@string/hh_mm"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/pickTimeBtn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-smallcaps"
                android:onClick="pickTimeBtnClick"
                android:text="@string/pick_time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">

        <Button
            android:id="@+id/editExamQuizBtn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="editExamQuizBtnClick"
            android:text="@string/edit_exam"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deleteExamQuizBtn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="deleteExamQuizBtnClick"
            android:text="@string/delete_exam"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
